Añadido ej6Resuelto.html

--- a/ej3.html
+++ b/ej3.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Documento Ej3</title>
+
 </head>
 <body>
   <h1>Creación de listas</h1>
@@ -15,8 +16,11 @@
   <input id="texto" type="text">
   <br>
   <button id="crearLista">Crear elementos</button>
+  <button id="borrarLista">Borrar lista</button>
   <br>
   <ol id="lista">
   </ol>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="ej3q.js"></script>
 </body>
 </html>
